# MoneySignal

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
infra/caddy/: Caddyfile
services/brain/: Dockerfile  README.md  pyproject.toml
services/brain/app/: __init__.py  config.py  main.py
services/brain/app/agents/: __init__.py  _stubbed.py  chart_agent.py  editor_agent.py  flow_agent.py  news_agent.py  risk_agent.py
services/brain/app/contracts/: __init__.py  errors.py  input.py  output.py
services/brain/app/gate/: __init__.py  service.py
services/brain/app/orchestrators/: __init__.py  evaluate_signal.py
services/brain/app/policies/: __init__.py  tone.py
services/brain/app/prompts/: __init__.py  builders.py  registry.py
services/brain/app/prompts/templates/: chart.md  editor.md  flow.md  news.md  risk.md
services/brain/app/runtime/: __init__.py  parallel.py
services/brain/app/scoring/: __init__.py  confidence.py
services/brain/docs/: launch-runbook.md
services/brain/docs/adrs/: ADR-001-v1-defaults.md  ADR-002-evaluate-signal-api-surface.md  ADR-003-launch-hardening-defaults.md
services/brain/tests/contracts/: test_error_contract.py  test_input_contract.py  test_output_contract.py
services/brain/tests/integration/: test_error_paths.py  test_evaluate_signal_orchestrator.py  test_health.py  test_parallel_agents.py  test_performance_baseline.py  test_signals_api.py
services/brain/tests/unit/: test_confidence.py  test_gate_service.py  test_http_hardening.py  test_prompt_builders.py  test_prompt_registry.py  test_tone_policy.py
(+37 files in other folders)
